AtoZ & boostrap theme CSS that fixes the IE issues and the hides the tooltips on mobile

--- a/includes/css/db-page-bootstrap.css
+++ b/includes/css/db-page-bootstrap.css
@@ -130,38 +130,24 @@ span.infoHeading h3 {
 }
 
 #subjectSelect, #typeSelect {
-  color: #000;
-  border: 1.5px solid #00386b;
-  border-radius: 0px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background-image:
-    linear-gradient(45deg, transparent 50%, #00386b 50%),
-    linear-gradient(135deg, #00386b 50%, transparent 50%),
-    linear-gradient(to right, #00386b, #00386b);
-  background-position:
-    calc(100% - 20px),
-    calc(100% - 15px),
-    calc(100% - 2.5em);
-  background-size: 5px 5px, 5px 5px, 1px 1.5em;
-  background-repeat: no-repeat;
+  display: block;
+width: 100%;
+height: calc(1.5em + .75rem + 2px);
+padding: .375rem .75rem;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+color: #00386b;
+background-color: #fff;
+background-clip: padding-box;
+border: 2px solid #00386b;
+border-radius: 0;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 #subjectSelect:focus, #typeSelect:focus {
   border-color: #e0aa0f;
   outline: 0;
-  background-image:
-    linear-gradient(45deg, #e0aa0f 50%, transparent 50%),
-    linear-gradient(135deg, transparent 50%, #e0aa0f 50%),
-    linear-gradient(to right, #ccc, #ccc);
-  background-position:
-    calc(100% - 15px),
-    calc(100% - 20px),
-    calc(100% - 2.5em);
-  background-size:
-    5px 5px,
-    5px 5px,
-    1px 1.5em;
   background-repeat: no-repeat;
   box-shadow: none;
 }
@@ -1341,4 +1327,19 @@ letter-spacing: .5px;
     border-radius: 2px;
     font-size: 1.5em;
   }
+
+  .tooltip {
+    display: none;
+  }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+     .nav-link {
+       padding: 0px !important;
+     }
+     .navbarUtc{
+
+       padding-top: 0px;
+       padding-bottom: 0px;
+     }
 }
